--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -558,7 +558,7 @@ GER_democratic_takebeism_ideals_desc:0 "True democracy as some claim is impracti
 GER_emi_victory:0 "Emi's Victory"
 GER_emi_victory_desc:0 "While seen by some as a cold but pragmatic leader, Emi's heart bleeds like so many others for our nation to get back on track, she knows what must be done to prevent the nations continued decline into authoritarianism, we put our faith in her"
 GER_de_nishizumization:0 "De-Nishizumization"
-GER_de_nishizumization_desc:0 "The Nishizumi Rot goes deep into our nation, we must turn our backs on this shameful era of our history if we are to make our nation great again"
+GER_de_nishizumization_desc:0 "The Nishizumi Rot goes deep into our nation, we must turn our backs on this shameful era of our history if we are to make our nation great again""
 GER_anti_corruption:0 "Anti Corruption Policies"
 GER_anti_corruption_desc:0 "We must not allow the same rot that caused the rise of Nishizumi rule to reappear, we must do all in our power to stop it from ever appearing once more"
 GER_forwards:0 "Forwards!"
@@ -600,8 +600,8 @@ GER_forwards_desc:0 "Whilst much more can be done, Emi must focus on turning our
  ##EU Focuses
  GER_european_union:0 "European Congress"
  GER_european_union_desc:0 "Europe has been divided for too long, It has caused many wars and much bloodshed. We should all come together for the better and unite into one great state."
- kmm_belgium:0 "Invite Belgium"   
- kmm_holland:0 "Invite the Netherlands"
+ kmm_belgium:0 "Invite Waffle"   
+ kmm_holland:0 "Invite the Batavian"
  kmm_lux:0 "Invite Luxembourg"
  GER_adopt_euro:0 "Adopt the Euro"
  GER_adopt_euro_desc:0 "Since we have Invited most of Europe we should adopt a currency that we can all use, univerally."
@@ -625,26 +625,26 @@ GER_forwards_desc:0 "Whilst much more can be done, Emi must focus on turning our
  kmm_europe_union:0 "European Union"
  kmm_austria:0 "Invite Ooarai"
  kmm_czech:0 "Invite Gregor"
- kmm_hungary:0 "Invite Hungary"
- kmm_yugo:0 "Invite Yugoslavia"
+ kmm_hungary:0 "Invite Turul"
+ kmm_yugo:0 "Invite Brazava"
  kmm_rom:0 "Invite Count"
  kmm_alb:0 "Invite Albania"
- kmm_greece:0 "Invite Greece"
+ kmm_greece:0 "Invite Hoplite"
  kmm_bulgaria:0 "Invite Yogurt"
  kmm_spain:0 "Invite Spain"
  kmm_portugal:0 "Invite Portugal"
  kmm_lit:0 "Invite Lithuana"
- kmm_lat:0 "Invite Latvia"
- kmm_est:0 "Invite Estonia"
- kmm_italy:0 "Invite Italy"
+ kmm_lat:0 "Invite Livland"
+ kmm_est:0 "Invite Hestia"
+ kmm_italy:0 "Invite Anzio"
  kmm_den:0 "Invite Denmark"
- kmm_nor:0 "Invite Norway"
- kmm_swe:0 "Invite Sweden"
+ kmm_nor:0 "Invite Viking"
+ kmm_swe:0 "Invite Viggen"
  kmm_fin:0 "Invite Jatkosota"
  kmm_uk:0 "Invite St. Gloriana"
  kmm_fra:0 "Invite BC Freedom"
  kmm_pol:0 "Invite Bonple"
- kmm_swi:0 "Invite Switzerland"
+ kmm_swi:0 "Invite Neutrality"
  ##EU TOOLTIPS
  kmm_balkan_tooltip2:0 "§RWill be removed after completion of:§! 'Develop the Balkans'"
  kmm_iberia_tooltip:0 "§CUnlocks§! 'Help Iberia Recover' §CFocus§!"
