--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -338,18 +338,12 @@
  GER_bulwark_against_bolshevism:0 "Bulwark Against Pravdaism"
  GER_bulwark_against_bolshevism_desc:0 "Our academy stands as a shield against Pravdaism, protecting the West from communism's influence. We must carry this mantle with pride, and prepare to use arms if necessary."
  GER_bulwark_against_bolshevism_tt:0 "§RThis National Spirit will be lost if in a faction with, or fighting a war on the same side of, Pravda.§!\n"
- GER_the_west:0 "Western Approaches"
- GER_the_west_desc:0 "If we seek to maintain peace with our neighbours we must seek to smooth over tensions with the west and perhaps even seek to ally them, to thwart eastern expansion. And if the west won’t have us we must push forwards by ourselves, to defend ourselves and those around us."
  GER_negotiate_alliance:0 "The New Triple Entente"
  GER_negotiate_alliance_desc:0 "We have had many differences with the western colonial powers in the past, but they know as well as us that if we continue to fight one another we will surely all be destroyed. A alliance is needed a triple Entente of sorts, a alliance of BC freedom, St Gloriana, and kuromorimine, a solid power block to oppose the ambitions of Anzio, Saunders and most Importantly Pravda, surely they will come to their senses and agree to our proposal to join."
  GER_polish_protection:0 "Protect the Boar"
  GER_polish_protection_desc:0 "Bonple whilst still maintaining control over some traditional lands of our own, are a major eastern guarantee in checking the power of Pravda. Ensuring their territorial integrity is essential to our own security and that of the security of all of Eastern Europe."
  GER_against_pravda:0 "Against Pravda"
  GER_against_pravda_desc:0 "The one schoool Kuromorimine is becoming increasingly worried about is Pravda and its beligerant leader Kaytusha, Kuromorimine needs to strike first to secure its future where we aren't pushed around."
- GER_our_own_way:0 "Our Own Way"
- GER_our_own_way_desc:0 "We can't find any useful alllies outside of Kuromorimine that are willing to help us. It's time we focus on our internal situation and try forging our own path."
- GER_expand_fortlines:0 "Expand Frontlines"
- GER_expand_fortlines_desc:0 "The military can only do so much in the face of us being surrounded by so many potential enemies, we must let the military have more control to defend ourselves in any war."
  GER_repaired_republic:0 "A Republic Restored."
  GER_repaired_republic_desc:0 "Many days we’ve worked to undo the harm done to our nation, and today it comes to a end. The reforms have been set in stone the parliament building now open to once again house democratic discussion, we are now ready to tackle Europe’s issues and will stand strong against tyranny."
  GER_unify_germans:0 "Joining the two Schools"
@@ -382,7 +376,7 @@
  GER_invite_anzio1_desc:0 "Anzio isn’t the best partner by any stretch of the imagination, being considered by many as a joke when it proclaims itself a European power, while this delusion does go deep, having this nation alongside us would make controlling it far easier and make the chance it decides to invade anyone less likely."
  GER_invite_northern_gang:0 "The Northern Lights"
  GER_invite_northern_gang_desc:0 "The Scandinavian countries to our north all have different reasons for why they may not wish to join, Viking and Viggen both have already stable economies and non predatory members surrounding them, the sales pitch to them may be far more different then the others."
- GER_free_market:0 "Kuromorimine Access Market"
+ GER_free_market:0 "Test the Free Market"
  GER_free_market_desc:0 "Kuromorimine's market has been restricted and closed off as we can't use our funds to export the supplies everyone wants and get the supplies we need. It's time we tear down the trade barriers of the past."
  GER_expand_civil_rights:0 "Expand the Rights of Students"
  GER_expand_civil_rights_desc:0 "Kuromorimine has held a prestigeous class of students with German Speakers being among the highest. Other people who had been sent here before don't get recognized for their talents due to this structure. Great minds are welcomed to Kuromorimine."
