--- a/localisation/english/gup_events_decisions_l_english.yml
+++ b/localisation/english/gup_events_decisions_l_english.yml
@@ -782,6 +782,33 @@
  kmm.216.d:0 "With the civil war now over, we must now turn their attention to dealing with the many groups that still hold loyalty to the Nishizumi regime. \n \nClearing them out will require some unsavoury tactics to ensure that they don’t reorganize themselves, but in time these radicals will be brought to justice and Kuromorimine will once again know peace. \n \nFor the next few days and weeks mass police raids and arrests will need to take place to stop any resurgent nishizumi force from plunging our nation back into chaos."
  kmm.216.a:0 "Wipe this Stain from our Nation!"
  
+ kmm.217.t:0 "Kuromine Asks for Alliance"
+ kmm.217.d:0 " A Interesting Request from the Kouromine diplomatic service has arrived to our diplomats in the country, requesting to join our alliance, several officials are opposed to allow them in, even if they have changed politically. \n \nWhile Rosehip seems quite adamant that we allow them in, due to their massive strategic importance, and as a useful potential continental ally."
+ kmm.217.a:0 "What could go wrong?"
+ kmm.217.b:0 "No"
+ 
+ kmm.218.t:0 "REJECTION of Alliance"
+ kmm.218.d:0 "In a disappointing turn it seems that despite rosehips pleas the St Gloriana has responded with a refusal, citing significant differences and concerns with St Gloriana being drawn into a war by Korumine. \n \nWhilst disappointing we must accept that St Gloriana has a right to remain skeptical and remain calm and collected to hopefully one day show that our intentions are pure."
+ kmm.218.a:0 "Sad"
+ 
+ kmm.219.t:0 "St Gloriana Accepts"
+ kmm.219.d:0 "After much discussion amongst the Ministers and military leaders ST Gloriana has decided to accept us with welcome arms into the alliance, with rosehip herself being the Energetic commander she was, personally travelling to Korumine to hand the acceptance letter in person. \n \nNow both St Gloriana and Korumine are united in their desire for peace and prosperity, we can move on to ensuring Europes continued security."
+ kmm.218.a:0 "Jetzt zocke ich Fortnite und trinke Cola! YIPPEE!"
+ 
+ kmm.220.t:0 ""
+ kmm.220.d:0 ""
+ kmm.220.a:0 ""
+ kmm.220.b:0 ""
+ 
+ kmm.221.t:0 ""
+ kmm.221.d:0 ""
+ kmm.221.a:0 ""
+ 
+ kmm.222.t:0 ""
+ kmm.222.d:0 ""
+ kmm.222.a:0 ""
+ 
+ 
  #####################
  ### NEW DEICSIONS ###
  #####################
