--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -454,12 +454,12 @@
  NOR_subject_DEF:0 "$OVERLORDADJ$ $NOR$"
  DEN_fascism:0 "North Sea Empire"
  DEN_fascism_DEF:0 "the North Sea Empire"
- DEN_democratic:0 "Danmǫrk"
- DEN_democratic_DEF:0 "Danmǫrk"
- DEN_neutrality:0 "Kingdom of Danmǫrk"
- DEN_neutrality_DEF:0 "the Kingdom of Danmǫrk"
- DEN_communism:0 "Danmǫrk Civil Union"
- DEN_communism_DEF:0 "the Danmǫrk Civil Union"
+ DEN_democratic:0 "Danmork"
+ DEN_democratic_DEF:0 "Danmork"
+ DEN_neutrality:0 "Kingdom of Danmork"
+ DEN_neutrality_DEF:0 "the Kingdom of Danmork"
+ DEN_communism:0 "Danmork Civil Union"
+ DEN_communism_DEF:0 "the Danmork Civil Union"
  DEN_fascism_ADJ:0 "Danish"
  DEN_democratic_ADJ:0 "Danish"
  DEN_neutrality_ADJ:0 "Danish"
