--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -41,7 +41,7 @@
  donitz:0 "Karl Dönitz"
  donitz_desc:0 "Karl Dönitz was a Kuromormine admiral with a fondness for Submarines and the Trade Interdiction doctrine."
  goering:0 "Hermann Göring"
- goering_desc:0 "Hermann Göring was a Great War fighter ace who became one of the Mahos chief supporters. While not the best at this job, he is devotedly loyal."
+ goering_desc:0 "Hermann Göring was a Great War fighter ace who became one of Maho's chief supporters. While not the best at this job, he is devotedly loyal."
  walther_wever:0 "Walther Wever"
  walther_wever_desc:0 "Walther Wever was an early proponent of the theory of strategic bombing."
  ritter_von_greim:0 "Ritter von Greim"
@@ -193,7 +193,7 @@
  vittorio_emanuele:0 "Pepperoni"
  vittorio_emanuele_desc:0 "The "Soldier Queen" remind the Italians of their recent victories in the Great War. His presence and their loyalty to him is a great source of unity for the people."
  amadeo_bordiga:0 "Amadeo Bordiga"
- ivanoe_bonomi:0 "Ivanoe Bonomi"
+ ivanoe_bonomi:0 "Bologna"
  carlo_scorza:0 "Carlo Scorza"
  mikhail_kalinin:0 "Mikhail Kalinin"
  nikita_khrushchev:0 "Nikita Khrushchev"
@@ -313,7 +313,7 @@
  mario_roatta:0 "Mario Roatta"
  vittorio_ambrosio:0 "Vittorio Ambrosio"
  alfredo_guzzoni:0 "Alfredo Guzzoni"
- italo_balbo:0 "Italo Balbo"
+ italo_balbo:0 "Carpaccio"
  rino_corso_fougier:0 "Rino Corso Fougier"
  francesco_pricolo:0 "Francesco Pricolo"
  ettore_muti:0 "Ettore Muti"
@@ -2417,7 +2417,7 @@
  ITA_giovanni_marinelli:0 "Giovanni Marinelli"
  ITA_gian_galeazzo_ciano:0 "Gian Galeazzo Ciano"
  ITA_roberto_farinacci:0 "Roberto Farinacci"
- ITA_dino_grandi:0 "Dino Grandi"
+ ITA_dino_grandi:0 "Amaretto"
  ITA_serafino_mazzolini:0 "Serafino Mazzolini"
  ITA_giacomo_acerbo:0 "Giacomo Acerbo"
  ITA_luigi_einaudi:0 "Luigi Einaudi"
