--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
  #NEW IDEOLOGIES AND PARTIES
  FIN_neutrality_party:1 "Mikaliitto"
- FIN_democratic_party:0 "JDP"
+ FIN_democratic_party:0 "Jatkosotan Demokraattinen Puolue"
  FIN_democratic_party_long:0 "Jatkosotan Demokraattinen Puolue"
- FIN_fascism_party:0 "MIK"
+ FIN_fascism_party:0 "Mikkon Ihmisten Kansanliike"
  FIN_fascism_party_long:0 "Mikkon Ihmisten Kansanliike"
- FIN_communism_party:0 "JKP"
+ FIN_communism_party:0 "Jatkosotan Kommunistinen Puolue"
  FIN_communism_party_long:0 "Jatkosotan Kommunistinen Puolue"
  FRA_communism_party:0 "Partie d'Examen"
  FRA_democratic_party:0 "Parti Escalator de Marie"
@@ -30,9 +30,9 @@
  british_idealism4:0 "British Idealism"
  british_idealism4_desc:0 "St.Gloriana is well-known for its unique Sensha-Do style of elegance and order. Darjeeling, its commander, prides herself on alledgedly never spilling her tea, regardless of circumstances. Considered to be amongst the Sensha-Do powerhouses, any school fighting against St.Gloriana should proceed with caution."
  GER_fascism_party:0 "Nishizumi Partei"
- GER_communism_party:0 "SSSP"
+ GER_communism_party:0 "Schwarzwaldspitzen Sozialistische Partei"
  GER_communism_party_long:0 "Schwarzwaldspitzen Sozialistische Partei"
- GER_democratic_party:0 "SDP"
+ GER_democratic_party:0 "Schwarzwaldspitzen Demokratische Partei"
  GER_democratic_party_long: "Schwarzwaldspitzen Demokratische Partei"
  GER_neutrality_party_civil_war:0 "Koume Militärregierung"
  GER_neutrality_party_kaiserreich:0 "Koumerimine Partei"
@@ -44,10 +44,20 @@
  german_idealism3_desc: "Inspired by the Germans, the academy has tactics based on strong formations both in offensive and defensive terms. With the latest developments in battles, the academy has shifted, leaning to a more mobile doctrine all-in-all. Seeing reform fit, a rephrasing and restructuring of tactics and such have been adapted. Only time will tell if it proves proper."
  german_idealism4: "German Idealism"
  german_idealism4_desc: "Inspired by the Germans, the academy has tactics based on strong formations both in offensive and defensive terms. With the latest developments in battles, the academy has shifted, leaning to a more mobile doctrine all-in-all. Seeing reform fit, a rephrasing and restructuring of tactics and such have been adapted. Only time will tell if it proves proper."
- ITA_communism_party:0 "Partito Comunista di Pepperoni"
- ITA_democratic_party:0 "Partito Popolare di Carpaccio"
- ITA_fascism_party:0 "Partito Nazionale di Anchovi"
- ITA_neutrality_party:0 "Partito Nazionale di Amaretta"
+ ITA_communism_party:1 "Partito Comunista Anzio"
+ ITA_communism_party_long:0 "Partito Comunista Anzio"
+ ITA_democratic_party:1 "Partito Popolare Anzio"
+ ITA_democratic_party_long:0 "Partito Popolare Anzio"
+ ITA_fascism_party:1 "Partito Nazionale Anchovi"
+ ITA_fascism_party_long:0 "Partito Nazionale Anchovi"
+ ITA_neutrality_party:1 "Partito Nazionale Pepperoni"
+ ITA_neutrality_party_long:0 "Partito Nazionale Pepperoni"
+ ITA_partito_socialista_italiano:0 "Partito Socialista Anzio"
+ ITA_partito_socialista_italiano_long:0 "Partito Socialista Anzio"
+ ITA_partito_democratico_del_lavoro:0 "Partito Democratico del Lavoro"
+ ITA_partito_democratico_del_lavoro_long:0 "Partito Democratico del Lavoro"
+ ITA_democrazia_cristiana:0 "Democrazia Cristiana"
+ ITA_democrazia_cristiana_long:0 "Democrazia Cristiana"
  italian_idealism:0 "Italian Idealism"
  italian_idealism_desc:0 "Anzio, located in Tochigi Prefecture, is renowned for its tourist attractions and amazing cuisine. It's Sensha-Do club is neglected and thus, is technologically inferior to many schools. However, with its recent acquisition of the P40 heavy tank, it is not advisable to underestimate them."
  italian_idealism2:0 "Italian Idealism"
