--- a/localisation/english/bba_characters_l_english.yml
+++ b/localisation/english/bba_characters_l_english.yml
@@ -50,7 +50,7 @@
  has_anarchist_government_tt:0 "Has anarchist government"
 
  #ITALY
- ITA_benito_mussolini_roman_emperor:0 "Augustus Pepperoni"
+ ITA_benito_mussolini_roman_emperor:0 "Augustus Anchovy"
  ITA_vittorio_emanuele_iii_roman_emperor:0 "Augustus Pepperoni"
  ITA_italo_balbo_roman_emperor:0 "Augustus Carpaccio"
  ITA_dino_grandi_roman_emperor:0 "Augustus Amaretto"
