portraits the sequel

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -169,7 +169,7 @@
  ITA_partito_democratico_del_lavoro_long:0 "Partito Democratico del Lavoro"
  ITA_democrazia_cristiana:0 "DC"
  ITA_democrazia_cristiana_long:0 "Democrazia Cristiana"
- AUS_communism_party:0 "Miho"
+ AUS_communism_party:0 
  AUS_communism_party_long:0 "Commander Miho"
  AUS_democratic_party:0 "Miho"
  AUS_democratic_party_long:0 "Commander Miho"
